--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "log",
-  "version": "0.1.1",
+  "name": "@aliataf/log",
+  "version": "0.2.0",
   "description": "Fast way to destinct your variables logged",
   "main": "index.js",
   "scripts": {
